syntax = "proto3";

option go_package = "./";

package chainedbft;

message QuorumCertSignature {
    string Address = 1;
    string PublicKey = 2;
    bytes Sig = 3;
}

message Message {
    enum MsgType {
        NEW_VIEW = 0;
        NEW_PROPOSAL = 1;
        VOTE = 2;
    }

    enum ErrorType {
        // success 
        SUCCESS = 0;
        NONE = 1;
        // common error
        UNKNOW_ERROR = 2;
        CHECK_SUM_ERROR = 3;
        UNMARSHAL_MSG_BODY_ERROR = 4;
        CONNECT_REFUSE = 5;
        // block error
        GET_BLOCKCHAIN_ERROR = 6;
        BLOCKCHAIN_NOTEXIST = 7;
        GET_BLOCK_ERROR = 8;
        CONFIRM_BLOCKCHAINSTATUS_ERROR = 9;
        GET_AUTHENTICATION_ERROR = 10;
        GET_AUTHENTICATION_NOT_PASS = 11;

    }

    message MsgHeader {
        string version = 1;
        string logid = 2;
        string from = 3;
        string bcname = 4;
        MessageType type = 5;
        uint32 dataCheckSum = 6;
        ErrorType errorType = 7;
        bool enableCompress = 8;

    }   

    message MsgData {
        // msgInfo is the message infomation, use protobuf coding style
        bytes msgInfo = 3;

    }

    MsgHeader = 1;
    MsgData = 2;
}

message ProposalMsg {
    int64 proposalView = 1;
    bytes proposalId = 2;
    int64 timestamp = 3;
    bytes JustifyQC = 4;
    QuorumCertSignature Sig = 5;
    bytes MsgDigest = 6;
}

message VoteMsg {
    bytes VoteInfo = 1;
    bytes LedgerCommitInfo = 2;
    repeated QuorumCertSignature sigs = 3;
}
